<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.passchange.passchangeapp.MainActivity" >

    <item
        android:id="@+id/action_delete_account"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/delete_account"/>
    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/change_password"/>
    <item android:id="@+id/action_change_account" android:title="Edit Account"></item>
    <item android:id="@+id/action_copy_password" android:title="Copy Password"></item>
    <item android:id="@+id/action_test_login" android:title="@string/test_login"></item>
    <item android:id="@+id/action_show_browser" android:title="@string/show_in_browser"></item>

</menu>
