<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/checkBoxLogOutWhenAppIsPaused"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="5sp"
        android:text="@string/logOutWhenPausingAppText" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/timeTillLogoutText"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5sp" >

        <EditText
            android:id="@+id/editTextTimeTillLogout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:text="10"
            android:textAlignment="gravity" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:text="@string/minutes" />
    </LinearLayout>

</LinearLayout>