<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20px"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="128px"
            android:layout_height="128px"
            android:layout_margin="20px" />

        <TextView
            android:id="@+id/textViewInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:orientation="vertical"
        android:verticalSpacing="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="10px"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/change_password_action"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_margin="10px"
                android:layout_weight="1"
                android:background="@drawable/linear_background"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="96px"
                    android:layout_height="96px"
                    android:src="@drawable/change_password_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_account_action"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_margin="10px"
                android:layout_weight="1"
                android:background="@drawable/linear_background"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="96px"
                    android:layout_height="96px"
                    android:src="@drawable/edit_account_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_account" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="10px"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/test_login_action"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_margin="10px"
                android:layout_weight="1"
                android:background="@drawable/linear_background"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="96px"
                    android:layout_height="96px"
                    android:src="@drawable/test_login_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_login" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_account_action"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_margin="10px"
                android:layout_weight="1"
                android:background="@drawable/linear_background"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="96px"
                    android:layout_height="96px"
                    android:src="@drawable/add_account_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_account" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="10px"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/copy_password_action"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_margin="10px"
                android:layout_weight="1"
                android:background="@drawable/linear_background"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="96px"
                    android:layout_height="96px"
                    android:src="@drawable/copy_password_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copy_password" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/export_account_icon"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_margin="10px"
                android:layout_weight="1"
                android:background="@drawable/linear_background"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="96px"
                    android:layout_height="96px"
                    android:src="@drawable/export_account_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_account" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="10px"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/delete_account_icon"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_margin="10px"
                android:layout_weight="1"
                android:background="@drawable/linear_background"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="96px"
                    android:layout_height="96px"
                    android:src="@drawable/delete_account_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>